Another attempt at fixing the issue where the background and navbar have white-space on the left side only on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-       margin: 0px;
+    margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
 }
@@ -13,7 +13,8 @@ body {
 html {
     width: 100%;
     height: 100%;
- 
+     margin: 0px;
+    padding: 0px;
 }
 
 
